# swedesweets-ops

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  railway.json  requirements.txt
accounts/: ARCHITECTURE.md  access.py  context_processors.py  detail_viewmodels.py  errors.py  form_viewmodels.py  forms.py  list_viewmodels.py  middleware.py  models.py  navigation.py  permissions.py  policies.py  roles.py  selectors.py  services.py  urls.py  views.py
common/: dashboard.py  detail_cards.py  form_layout.py  middleware.py  page_header.py  results.py  table_controls.py  table_tools.py  ui.py
config/: settings.py  urls.py  views.py
customer_portal/: access.py  apps.py  detail_viewmodels.py  form_viewmodels.py  forms.py  order_list_viewmodels.py  review_viewmodels.py  selectors.py  services.py  urls.py  viewmodels.py  views.py
customers/: access.py  admin.py  apps.py  detail_viewmodels.py  errors.py  form_viewmodels.py  forms.py  list_viewmodels.py  models.py  presentation.py  selectors.py  services.py  urls.py  views.py
dashboard/: access.py  actions.py  queues.py  viewmodels.py  views.py
inventory/: access.py  detail_viewmodels.py  errors.py  expiry.py  form_viewmodels.py  forms.py  list_viewmodels.py  low_stock.py  mini_cards.py  models.py  presentation.py  selectors.py  services.py  urls.py  views.py
orders/: access.py  datatypes.py  detail_viewmodels.py  errors.py  form_viewmodels.py  forms.py  list_viewmodels.py  mini_cards.py  models.py  order_limits.py  presentation.py  product_choices.py  selectors.py  services.py  urls.py  views.py
(+204 files in other folders)
