[project]
name = "swedesweets"
version = "0.1.0"
description = "SwedeSweets operational platform"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "Django>=6.0,<6.1",
    "Pillow>=10.0",
    "django-extensions>=4.1,<5.0",
    "gunicorn>=23.0,<24.0",
    "psycopg[binary]>=3.2,<4.0",
    "whitenoise>=6.9,<7.0",
    "ipython>=9.0,<10.0",
    "pytest>=9.0,<10.0",
    "pytest-django>=4.12,<5.0",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = [
    "products",
    "inventory",
    "orders",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/admin.py",
    "*/apps.py",
    "*/urls.py",
    "*/views.py",
    "*/forms.py",
    "*/demo.py",
    "manage.py",
    "config/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools.packages.find]
include = [
    "common",
    "config",
    "customers",
    "inventory",
    "orders",
    "products",
]
exclude = [
    "static",
    "templates",
]
